<resources>
    <string name="app_name">Lead Tracker</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_login">Sign In With CB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leads">Leads</string>
    <string name="dashboard">Dashboard</string>
    <string name="centres">Centres</string>
    <string name="courses">Courses</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="info">Info</string>
    <string name="leeds">Leeds</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="student_name">Name</string>
    <string name="student_email">Email</string>
    <string name="student_dob">Date Of Birth</string>
    <string name="student_college">College</string>
    <string name="student_year">Year</string>
    <string name="students_college">College</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="created_by">Created By</string>
</resources>
