<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.codingblocks.leadtracker.fragments.LeadsInfoChildFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/student_name"/>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/student_email" />

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/student_dob" />

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/student_college" />
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/student_year" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="end"
        android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_dialog_email"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>