<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:weightSum="7"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="0dp"/>

   <EditText
       android:layout_width="match_parent"
       android:layout_weight="1"
       android:gravity="center"
       android:id="@+id/username"
       android:hint="@string/form_username"
       android:layout_height="0dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/password"
        android:hint="@string/form_password"
        android:layout_height="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:text="@string/form_login"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="0dp"/>
</LinearLayout>